// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering snapshots should render valid snapshot 1`] = `
<Row
  tag="div"
>
  <Col
    sm="6"
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
    xs="12"
  >
    <div>
      <a
        href="http://www.mylastpost.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        Test Title
      </a>
    </div>
    <div
      className="small "
    >
      <span>
        Last Post by
         
        <a
          href="http://www.mylastpost.com"
          rel="noopener noreferrer"
          target="_blank"
        >
          last-poster
        </a>
      </span>
    </div>
  </Col>
  <Col
    className="text-right"
    sm="6"
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
    xs="12"
  >
    <div>
      <t
        ago={false}
        calendar={false}
        decimal={false}
        element="time"
        filter={[Function]}
        format="MMMM D, YYYY h:mm"
        fromNow={false}
        interval={60000}
        onChange={[Function]}
        titleFormat=""
        toNow={false}
        unit={null}
        unix={false}
        utc={false}
        withTitle={false}
      >
        1989-06-05 3:14PM
      </t>
    </div>
    <div
      className="small"
    >
      <button
        data-spec="recent-activity-row-untrack-button"
        onClick={[Function]}
        type="button"
      >
        Untrack
      </button>
       
      •
       
      <button
        data-spec="recent-activity-row-archive-button"
        onClick={[Function]}
        type="button"
      >
        Archive
      </button>
       
      •
       
      <button
        data-spec="recent-activity-row-queue-button"
        onClick={[Function]}
        type="button"
      >
        Mark Queued
      </button>
    </div>
  </Col>
</Row>
`;

exports[`rendering snapshots should render valid snapshot with null status 1`] = `
<Row
  tag="div"
>
  <Col
    sm="6"
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
    xs="12"
  >
    <div>
      <span>
        Test Title
      </span>
    </div>
    <div
      className="small "
    />
  </Col>
  <Col
    className="text-right"
    sm="6"
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
    xs="12"
  >
    <div>
      <span>
        Awaiting Starter
      </span>
    </div>
    <div
      className="small"
    >
      <button
        data-spec="recent-activity-row-untrack-button"
        onClick={[Function]}
        type="button"
      >
        Untrack
      </button>
       
      •
       
      <button
        data-spec="recent-activity-row-archive-button"
        onClick={[Function]}
        type="button"
      >
        Archive
      </button>
       
      •
       
      <button
        data-spec="recent-activity-row-queue-button"
        onClick={[Function]}
        type="button"
      >
        Mark Queued
      </button>
    </div>
  </Col>
</Row>
`;
